k8s/nautible-aw/deploy/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nautible-ac
  namespace: nautible
  labels:
    name: nautible-ac
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nautible-ac
  template:
    metadata:
      labels:
        app: nautible-ac
    spec:
      containers:
      - name: nautible-ac
        image: nautible/nautible-ac:1.0.0
        command:
        - nautible-ac
        - --tls-cert-file=etc/nautible-ac/certs/cert.pem
        - --tls-key-file=etc/nautible-ac/certs/key.pem
        volumeMounts:
          - name: cert-volume
            mountPath: /etc/nautible-ac/certs
            readOnly: true
      volumes:
        - name: cert-volume
          secret:
            secretName: nautible-aw-certs

---
apiVersion: v1
kind: Service
metadata:
  name: nautible-ac
  namespace: nautible
spec:
  selector:
    app: nautible-ac
  ports:
  - port: 443
    targetPort: 8080
