k8s/nautible-aw/deploy/webhook-configuration.yaml
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: nautible-aw
  namespace: nautible
webhooks:
- name: nautible-aw.nautible.com
  admissionReviewVersions:
  - v1beta1
  - v1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURGRENDQWZ5Z0F3SUJBZ0lVUnJ0Q2RmK1IycHB5VWxrNTludEdJRnpPKzE4d0RRWUpLb1pJaHZjTkFRRUwKQlFBd0lqRWdNQjRHQTFVRUF4TVhRV1J0YVhOemFXOXVJRU52Ym5SeWIyeHNaWElnUTBFd0hoY05NakV3TlRBMwpNREl6TkRBd1doY05Nall3TlRBMk1ESXpOREF3V2pBaU1TQXdIZ1lEVlFRREV4ZEJaRzFwYzNOcGIyNGdRMjl1CmRISnZiR3hsY2lCRFFUQ0NBU0l3RFFZSktvWklodmNOQVFFQkJRQURnZ0VQQURDQ0FRb0NnZ0VCQU5naEJJSVUKbjJnY3NEQ01hM2JFZmdYYWs1cXdmMUxDbnl0L3ltSUxPNnlZaHE3NHNaTHFDa0E3YjBkTE5malN4ZTZiQkFJdgpPWnVObTU5QjlxbU [...]
    service:
      name: nautible-ac
      namespace: nautible
      path: "/mutate"
  rules:
  - apiGroups: [""]
    apiVersions: ["v1"]
    operations: ["CREATE"]
    resources: ["pods"]
  sideEffects: None
  timeoutSeconds: 5
